--- a/src/style/style.css
+++ b/src/style/style.css
@@ -84,3 +84,21 @@ h1.titre{
     align-items: top;
     justify-content: center;
 }
+
+.btn{
+    padding: .5em 3em;
+    
+    background-color: var(--text-color-sp);
+    border-color: var(--text-color-sp);
+
+    color: var(--text-color);
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 20px;        /* Taille du texte */
+    
+    font-style: normal;
+
+    border-radius: 20px;
+    cursor: pointer;        /* Curseur de pointeur */
+}
