--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,29 +32,40 @@ body{
     font-family: "Poppins", sans-serif;
     font-weight: 100;
     font-style: normal;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav
 {
 
-    width: 80%;
-    padding: 0% 10%;
+    width: 100%;
 
     height: 100px;
 
     display: flex;
     flex-direction: row;
 
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     border-bottom: var(--bg-color-sp) 1px solid;
 
 }
+nav>*{
+    width: 80%;
+
+    display: flex;
+    flex-direction: row;
+
+    justify-content: space-between;
+    align-items: center;
+}
 
 section{
     width: 80%;
-    padding: 0% 10%;
 }
 
 span{
@@ -77,28 +88,58 @@ h1.titre{
 
 .header_titre_img{
     padding-top: 20vh;
-
+    padding-left: 10vh;
     display: flex;
     flex-direction: row;
     
     align-items: top;
-    justify-content: center;
+    justify-content: left;
 }
 
-.btn{
-    padding: .5em 3em;
-    
+.header_titre>h1{
+    padding-bottom: .5em;
+}
+
+.header_button{
+    display: flex;
+    justify-content: left;
+}
+.header_button>*{
+    padding-right: 2em;
+}
+
+.first_img{
+    padding-left: 10vh;
+    height: 80vh;
+    transform: translateY(-10%);
+}
+
+/* Style des boutons */
+button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+button > * {
+    padding: 0 0.5em;
+}
+
+.btn {
+    padding: 0.5em 1.5em;
     background-color: var(--text-color-sp);
-    border-color: var(--text-color-sp);
-
+    border: 0;
     color: var(--text-color);
-
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    font-size: 20px;        /* Taille du texte */
-    
-    font-style: normal;
-
+    font-size: 1.25rem; /* Taille adaptative */
     border-radius: 20px;
-    cursor: pointer;        /* Curseur de pointeur */
+    cursor: pointer;
 }
+
+/* Variante de bouton inversé */
+.rever {
+    background-color: var(--bg-color-sp);
+    border: 0;
+}
+
